add new card with button on hover

--- a/01_style_fancy_buttons/index.html
+++ b/01_style_fancy_buttons/index.html
@@ -33,5 +33,23 @@
     <button class="btn-anim btn-anim--1">Click</button>
     <button class="btn-anim btn-anim--2"><span class="btn-anim--text">Click</span><span class="btn-anim--arrow"> >></span></button>
 </section>
+<hr>
+<section>
+    <h4>Card Transition With Button And Text</h4>
+    <section class="section-test">
+
+        <div class="bilet ">
+            <img src="images/parrot-1246688_1280.jpg" alt="parrot">
+            <h3 class="text-center ">HALLO JS</h3>
+            <div class="bilet--2">
+                <div class="bilet--2__box-info">
+                    <h3>Parrot</h3>
+                    <button class="text-center" type="button">LEARN MORE</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+</section>
 </body>
 </html>
